# wf-panel-pi-swaytitle

./: README.md  meson.build
src/: meson.build
src/widgets/: meson.build
src/widgets/swaytitle/: meson.build  swaytitle.cpp  swaytitle.hpp  swaytitle.xml
